comment lines deleted

--- a/WT-9964P/assets/css/style.css
+++ b/WT-9964P/assets/css/style.css
@@ -6,6 +6,22 @@
   z-index: 100;
 }
 
+#nav li button {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+#nav button.navbar-toggler {
+  padding-bottom: 10px;
+}
+#nav button.navbar-toggler::before {
+  content: "Menu";
+  font-size: 14px;
+}
+
+.navbar-toggler-icon {
+  font-size: 10px;
+}
+
 #nav li button,
 .modal-footer button,
 #nav li button:visited,
@@ -20,10 +36,6 @@
 .modal-footer button:active {
   background-color: #be1812 !important;
   border-color: #be1812 !important;
-}
-
-#nav a:hover {
-  color: #ff1b20;
 }
 
 #nav ul li > a:hover {
@@ -53,13 +65,6 @@
   }
 }
 
-/* top: 50%; yapınca .daire divi, .telefon div'inin yüksekliğinin %50'si kadar üstten boşluk bırakıldı. 
-left yapınca da aynı mantık .telefon divinin genişliğinin yarısı kadar soldan boşluk bırakıldı.
-böyle yapınca öğenin sol üst köşesi tam ortaya geldi. sonra CSS'de transform özelliği, elementleri taşımanıza, döndürmenize, ölçeklendirmenize ve eğmenize olanak tanır. onu kullandık 
-transform özelliğinin translate diye bi fonksiyonu var, öğeyi x ve y eksenlerinde taşır. mevcut konumundan 50 px sağa 100 px aşağı dersen mesela transform: translate(50px,100px); dersin.
-biz -50% kullanınca öğenin kendi boyutunun yarısı kadar sola ve yukarı taşıdık. e sol üst köşesi ortadaydı, böylece tam merkezi ortada oldu.
-diğer transform fonksiyonları: https://kodlamavakti.com/css/2-boyutlu-donusumler/ */
-
 @media (min-width: 768px) {
   .telefon {
     max-width: 17rem;
@@ -69,14 +74,16 @@ diğer transform fonksiyonları: https://kodlamavakti.com/css/2-boyutlu-donusuml
     width: 24.5rem;
     height: 24.5rem;
   }
+}
 
+@media (min-width: 992px) {
   #features .daire {
     width: 15rem;
     height: 15rem;
     left: 50px;
-    transform: translate(-50%, -50%);
   }
 }
+
 @media (min-width: 1400px) {
   .telefon {
     max-width: 20rem;
@@ -90,8 +97,6 @@ diğer transform fonksiyonları: https://kodlamavakti.com/css/2-boyutlu-donusuml
   #features .daire {
     width: 20rem;
     height: 20rem;
-    left: 50px;
-    transform: translate(-50%, -50%);
   }
 }
 
@@ -109,7 +114,6 @@ diğer transform fonksiyonları: https://kodlamavakti.com/css/2-boyutlu-donusuml
 
 #banner {
   color: white;
-  background-color: rgb(145, 222, 245);
   background-image: url(https://wallpapers.com/images/featured/brawl-lgmk2y884nb65e3g.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -122,17 +126,13 @@ diğer transform fonksiyonları: https://kodlamavakti.com/css/2-boyutlu-donusuml
   width: 100%;
   height: 100%;
   background-color: #000;
-  position: absolute; /* üstte banner relative ya, bunu absolute yapınca bannere göre top left yaptık */
+  position: absolute;
   top: 0;
   left: 0;
-  opacity: 0.65; /* 1 verirsek resim görünmez */
-  z-index: 0; /* aşağıda da z-index 10 verdik yani h2 yazıları falan bu karartmanın önüne çıkacak */
+  opacity: 0.65;
+  z-index: 0;
 }
 #banner > * {
   z-index: 10;
   position: relative;
 }
-/* genişliğe göre resimler oturuyo ya, 
-uzunluğu genişliğinden çok daha fazla olanlar için elle @media şeklinde ayarlamamız lazım çünkü genişliği %100 yapınca baya uzun olduğu için çok uzun oluyor,
-yani genişliği boyundan büyük olanlar için sıkıntı yok o güzelce ayarlanıyor ama genişliği boyundan az olanlar için sıkıntı var kendimiz ayarlamalıyız
- */
